# extract_data

./: .gitignore  CLAUDE.md  README.md  analyze_id.py  benchmark_jac.py  browser.py  compare.py  compare_id.py  compare_jacobian_estimates.py  copilot-instructions.md  debug_approx_sigma.py  estimate_residual_stats.py  extract.py  extract_dataset.py  extract_manifold.py  generate_manifold_configs.py  out.dvc  plans.md  plot_id.py  pyproject.toml  qwen3_random_tokens.h5.dvc  run.py  run_extract.sbatch  smoke_approx_sigma.py  submit_all.sh  submit_all_mauao.sh  test_ess.py  test_jac.py  test_jac2.py  upload.py
.ptrs/: qwen3_random_tokens.h5.ptr  qwen_real_wikitest.h5.ptr
backs/datasets_sigma/: qwen3_0.6b_c4_bg_n1024_s64.json  qwen3_0.6b_c4_n1024_s64.json  qwen3_0.6b_gsm8k_n1024_s64.json  qwen3_0.6b_random_tokens_n1024_s64.json  qwen3_0.6b_wikitext_n1024_s64.json
backs/datasets_sigma/datasets_sigma/: qwen3_0.6b_c4_bg_n1024_s64.json  qwen3_0.6b_c4_n1024_s64.json  (+2 more)
configs/: gpt2.json  gpt2_manifold_ellipsoid_jac.json  gpt2_manifold_plane_rand.json  gpt2_wikitext.json  llama-3.2-1b.json  pythia_jac.json  pythia_latent.json  qwen3_c4.json  qwen3_c4_bg.json  qwen3_gsm8k.json  qwen3_jac.json  qwen3_latent.json  qwen3_manifold_plane.json  qwen3_manifold_plane_rand.json  qwen3_wikitext.json  smoke_gpt2.json  smoke_qwen.json
configs/precision/: gpt2_jac_n128_s128.json  gpt2_jac_smoke.json  llama_jac_n32_s64.json  pythia_jac_n32_s64.json  qwen3_jac_n32_s64.json
configs/tests/: gpt2_approx_sigma_test.json  gpt2_manifold_ellipsoid_jac.json  pythia_approx_sigma_test.json  pythia_jac.json  qwen3_approx_sigma_test.json  qwen3_jac.json  qwen3_latent.json  qwen3_random_tokens.json
outputs/: gpt2.h5
outputs1/: gpt2.h5
scripts/: analyze_id.py  compare_id.py  embedding_cone.py  embedding_ess.py  measure_embedding_radius.py  migrate_ptr_meta.py  print_approx_sigma.py  test_jac.py  test_jac2.py  unembedding_cone.py
src/hf_jacobian/: __init__.py  custom_model.py  id_estimators.py  invertibility.py  jacobian.py  manifold_dataset.py  stan_samples.py
(+768 files in other folders)
