[project]
name = "hf-jacobian"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Preslav", email = "preslav.aleksandrov@protonmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "torch>=2.11.0",
    "transformers>=5.6.2",
    "h5py>=3.0",
]

[project.scripts]
hf-jacobian = "hf_jacobian:main"

[build-system]
requires = ["uv_build>=0.11.1,<0.12.0"]
build-backend = "uv_build"
