[project]
name = "hf-jacobian"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Preslav", email = "preslav.aleksandrov@protonmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "torch>=2.11.0",
    "transformers>=5.6.2",
    "h5py>=3.0",
    "datasets>=4.8.5",
    "scikit-dimension",
    "matplotlib>=3.10.9",
    "tqdm>=4.67.3",
    "paramiko>=4.0.0",
    "nvidia-ml-py>=13.595.45",
    "xxhash>=3.7.0",
    "questionary>=2.1.1",
    "textual>=8.2.5",
]

[project.scripts]
hf-jacobian = "hf_jacobian:main"

[build-system]
requires = ["uv_build>=0.11.1,<0.12.0"]
build-backend = "uv_build"
