[project]
name = "hf-jacobian"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Preslav", email = "preslav.aleksandrov@protonmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "torch==2.11.0",
    "torchvision>=0.26.0",
    "transformers>=5.0.0",
    "h5py>=3.0",
    "datasets>=4.8.5",
    "scikit-dimension",
    "matplotlib>=3.10.9",
    "tqdm>=4.67.3",
    "paramiko>=4.0.0",
    "nvidia-ml-py>=13.595.45",
    "xxhash>=3.7.0",
    "textual>=8.2.5",
    "wandb>=0.18",
    "accelerate>=1.13.0",
    "bitsandbytes>=0.49.2",
    "gguf>=0.10.0",
    "tiktoken>=0.9.0",
    "kernels>=0.13.0",
    "cmdstanpy>=1.3.0",
]

[project.scripts]
hf-jacobian = "hf_jacobian:main"

[build-system]
requires = ["uv_build>=0.11.1,<0.12.0"]
build-backend = "uv_build"
